ServiceIdTest refactoring